fix: Media icons too large on tablet+

--- a/src/niall-paterson/partials/_fonts.scss
+++ b/src/niall-paterson/partials/_fonts.scss
@@ -47,7 +47,6 @@ p {
   }
   
   h2,
-  i,
   li {
     font-size: $medium-font * 1.125;
   }
@@ -55,9 +54,4 @@ p {
   p {
     font-size: $small-font * 1.125;
   }
-
-  i {
-    font-size: $icon-font * 1.125;
-   }
-
 }
